--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -38,7 +38,9 @@
     "solsen@microsoft.com",
     "sgroespe@microsoft.com"
   ],
-  "branches_to_filter": [],
+  "branches_to_filter": [
+    "live-sxs"
+  ],
   "continue_with_document_error": true,
   "skip_source_output_uploading": false,
   "need_preview_pull_request": false,
