--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,21 +1,5 @@
 {
-  "docsets_to_publish": [
-    {
-      "docset_name": "financialssmbfull",
-      "build_source_folder": "FullExperience",
-      "build_output_subfolder": "financialssmbfull",
-      "locale": "cs-cz",
-      "monikers": [],
-      "open_to_public_contributors": false,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "ManagedReference": "Content",
-        "RestApi": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes"
-    }
-  ],
+  "docsets_to_publish": [],
   "notification_subscribers": [
     "edupont@microsoft.com",
     "solsen@microsoft.com",
