--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -6,6 +6,7 @@
       "build_output_subfolder": "d365accountant",
       "locale": "cs-cz",
       "monikers": [],
+      "moniker_ranges": [],
       "open_to_public_contributors": false,
       "type_mapping": {
         "Conceptual": "Content",
@@ -55,7 +56,9 @@
     "solsen@microsoft.com"
   ],
   "sync_notification_subscribers": [],
-  "branches_to_filter": [],
+  "branches_to_filter": [
+    "live-sxs"
+  ],
   "continue_with_document_error": true,
   "skip_source_output_uploading": false,
   "need_preview_pull_request": false,
