--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,24 +1,5 @@
 {
-  "docsets_to_publish": [
-    {
-      "docset_name": "d365accountant",
-      "build_source_folder": "accountant",
-      "build_output_subfolder": "d365accountant",
-      "locale": "cs-cz",
-      "monikers": [],
-      "moniker_ranges": [],
-      "open_to_public_contributors": false,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "ManagedReference": "Content",
-        "RestApi": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes",
-      "moniker_groups": [],
-      "version": 0
-    }
-  ],
+  "docsets_to_publish": [],
   "notification_subscribers": [
     "edupont@microsoft.com",
     "solsen@microsoft.com"
