update with existing .openpublishing.publish.config.json

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -32,11 +32,12 @@
   "continue_with_document_error": true,
   "skip_source_output_uploading": false,
   "need_preview_pull_request": false,
+  "contribution_branch_mappings": {},
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
       "url": "https://github.com/Microsoft/templates.docs.msft.de-de",
-      "branch": "master",
+      "branch": "main",
       "branch_mapping": {}
     },
     {
@@ -45,13 +46,13 @@
       "branch": "live",
       "branch_mapping": {
         "live": "live",
-        "master": "master"
+        "main": "main"
       }
     },
     {
       "path_to_root": "_themes.pdf",
       "url": "https://github.com/Microsoft/templates.docs.msft.pdf",
-      "branch": "master",
+      "branch": "main",
       "branch_mapping": {}
     }
   ],
@@ -68,7 +69,6 @@
     }
   },
   "need_generate_intellisense": false,
-  "contribution_branch_mappings": {},
   "docs_build_engine": {
     "name": "docfx_v3"
   }
